--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
     <link rel="stylesheet" href="index.css" />
   </head>
 
@@ -31,7 +34,7 @@
       <input type="text" id="input-field" placeholder="How are you feeling?" />
       <button id="add-button">Add your feelings</button>
       <ul id="mood-list"></ul>
-      <p id="datetime"></p>
+      <p class="light-txt">Click on the mood to delete it</p>
     </div>
 
     <script src="functions.js" type="module"></script>
