--- a/index.html
+++ b/index.html
@@ -32,10 +32,16 @@
           SBTS2018
         </a>
       </p>
+      <p class="light-txt">Click on the mood to delete it</p>
       <input type="text" id="input-field" placeholder="How are you feeling?" />
       <button id="add-button">Add your feelings</button>
       <ul id="mood-list"></ul>
-      <p class="light-txt">Click on the mood to delete it</p>
+      <p class="footer">
+        This page was built by
+        <a href="https://github.com/elic4vet" target="_blank"
+          >Elisabeth Erkekoglou</a
+        >👩‍💻
+      </p>
     </div>
 
     <script src="functions.js" type="module"></script>
